# open_manipulator

./: .gitignore  .gitmodules  .open_manipulator.rosinstall  .travis.yml  Dockerfile  README.md  docker-compose.yml  install_ros_dashing.sh  open_manipulator_ci.repos  open_manipulator_x.repos  openmanipulator.repos
cmake_modules/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cmake_modules/cmake/: cmake_modules-extras.cmake.in
open_manipulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_bringup/: CHANGELOG.rst  CMakeLists.txt  open-manipulator-cdc.rules  open-manipulator-y-cdc.rules  package.xml  setup.cfg  setup.py
open_manipulator_bringup/env-hooks/: open_manipulator_bringup.dsv.in
open_manipulator_bringup/launch/: ai_teleoperation.launch.py  bringup.launch.py  camera_realsense.launch.py  camera_usb_cam.launch.py  gazebo.launch.py  hardware_x.launch.py  hardware_x_follower.launch.py  hardware_x_leader.launch.py  hardware_y.launch.py  hardware_y_follower.launch.py  hardware_y_leader.launch.py  omx.launch.py  omx6_follower_ai.launch.py  omx6_leader_ai.launch.py  omx_ai.launch.py  omx_f.launch.py  omx_f_follower_ai.launch.py  omx_f_follower_ai_gazebo.launch.py  omx_f_gazebo.launch.py  omx_follower.launch.py  omx_follower_ai.launch.py  omx_gazebo.launch.py  omx_l_leader_ai.launch.py  omx_leader.launch.py  omx_leader_ai.launch.py  omy_3m.launch.py  omy_3m_gazebo.launch.py  omy_3m_pack.launch.py  omy_3m_unpack.launch.py  omy_ai.launch.py  omy_ai_reverse.launch.py  omy_base_gazebo.launch.py  omy_f3m.launch.py  omy_f3m_follower_ai.launch.py  omy_f3m_follower_ai_gazebo.launch.py  omy_f3m_gazebo.launch.py  omy_f3m_leader_ai.launch.py  omy_follower_ai.launch.py  omy_follower_gazebo.launch.py  omy_l100_follower_ai.launch.py  (+11 more)
open_manipulator_bringup/open_manipulator_bringup/: init_position_x.py  init_position_y_follower.py  joint_trajectory_executor.py  om_create_udev_rules.py  pack_unpack_3m.py  pack_unpack_y.py
open_manipulator_bringup/scripts/: init_position.py  init_position_for_follower.py  init_position_y_follower.py  om_create_udev_rules  om_create_udev_rules.py  open-manipulator-x-cdc.rules  pack_position_for_follower.py  pack_unpack_y.py  x_create_udev_rules  y_create_udev_rules
open_manipulator_bringup/worlds/: empty_world.sdf
open_manipulator_collision/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_collision/launch/: self_collision.launch.py
open_manipulator_collision/src/: self_collision_node.cpp
open_manipulator_control_gui/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
open_manipulator_control_gui/launch/: open_manipulator_control_gui.launch
open_manipulator_control_gui/src/: main.cpp  main_window.cpp  qnode.cpp
open_manipulator_control_gui/ui/: main_window.ui
open_manipulator_controller/: 99-open-manipulator-cdc.rules  CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_controller/launch/: open_manipulator_controller.launch  open_manipulator_moveit.launch
open_manipulator_controller/scripts/: create_udev_rules
open_manipulator_controller/src/: open_manipulator_controller.cpp
open_manipulator_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_description/doc/: open_manipulator_chain.docx  robotis_open_manipulator_chain_mass_property.xlsx
open_manipulator_description/gazebo/: materials.xacro  omx.gazebo.xacro  omx_f.gazebo.xacro  omx_l.gazebo.xacro  omy_3m.gazebo.xacro  omy_base.gazebo.xacro  omy_f3m.gazebo.xacro  omy_l100.gazebo.xacro  open_manipulator_x.gazebo.xacro  open_manipulator_y_arm.gazebo.xacro  rh_p12_rn_a.gazebo.xacro
open_manipulator_description/launch/: model_x.launch.py  model_y.launch.py  omx.launch.py  omx_f.launch.py  omx_l.launch.py  omy_3m.launch.py  omy_f3m.launch.py  omy_l100.launch.py  open_manipulator_chain_ctrl.launch  open_manipulator_chain_rviz.launch  open_manipulator_ctrl.launch  open_manipulator_model.launch  open_manipulator_rviz.launch  open_manipulator_upload.launch  open_manipulator_x.launch.py  x_model.launch.py
open_manipulator_description/meshes/: chain_link1.stl  chain_link2.stl  chain_link3.stl  chain_link4.stl  chain_link5.stl  chain_link_grip1.stl  chain_link_grip2.stl  chain_link_grip_l.stl  chain_link_grip_r.stl
open_manipulator_description/ros2_control/: omx.ros2_control.xacro  omx6_follower.ros2_control.xacro  omx6_leader.ros2_control.xacro  omx_f.ros2_control.xacro  omx_follower.ros2_control.xacro  omx_l.ros2_control.xacro  omx_leader.ros2_control.xacro  omy_3m.ros2_control.xacro  omy_3m_end_unit.ros2_control.xacro  omy_3m_position.ros2_control.xacro  omy_base_system.ros2_control.xacro  omy_f3m.ros2_control.xacro  omy_f3m_30hz.ros2_control.xacro  omy_f3m_current.ros2_control.xacro  omy_f3m_end_unit.ros2_control.xacro  omy_f3m_position.ros2_control.xacro  omy_f3m_smooth.ros2_control.xacro  omy_l100.ros2_control.xacro  omy_l100_current.ros2_control.xacro  omy_l100_position.ros2_control.xacro  omy_l100_system.ros2_control.xacro  open_manipulator_x.ros2_control.xacro  open_manipulator_x_follower_system.ros2_control.xacro  open_manipulator_x_leader_system.ros2_control.xacro  open_manipulator_x_position.ros2_control.xacro  open_manipulator_x_system.ros2_control.xacro  open_manipulator_y_end_unit.ros2_control.xacro  open_manipulator_y_follower_system.ros2_control.xacro  (+2 more)
open_manipulator_dynamixel_ctrl/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_example/: CMakeLists.txt  package.xml
open_manipulator_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_libs/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_motion_planning_ctrl/: CMakeLists.txt  package.xml
open_manipulator_moveit/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml  planning_request_adapters_plugin_description.xml
open_manipulator_moveit_bridge/: CMakeLists.txt  package.xml
open_manipulator_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_perception/: CMakeLists.txt  package.xml
(+836 files in other folders)
