<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator</name>
  <version>3.0.0</version>
  <description>
    OpenMANIPULATOR-X meta ROS 2 package.
  </description>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <author email="willson@robotis.com">Will Son</author>
  <author email="wsh@robotis.com">Sungho Woo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_x_bringup</exec_depend>
  <exec_depend>open_manipulator_x_description</exec_depend>
  <exec_depend>open_manipulator_x_gui</exec_depend>
  <exec_depend>open_manipulator_x_moveit_config</exec_depend>
  <exec_depend>open_manipulator_x_playground</exec_depend>
  <exec_depend>open_manipulator_x_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
