<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_control_gui</name>
  <version>1.0.0</version>
  <description>
    open_manipulator_control_gui
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>open_manipulator_msgs</depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
</package>
