<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_controller</name>
  <version>1.0.0</version>
  <description>
    open_manipulator_controller
  </description>
  <license>Apache 2.0</license>
  <author email="yhna@robotis.com">YongHo Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_controller</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>robotis_manipulator</depend>
  <depend>open_manipulator_libs</depend>
</package>
